second section added

--- a/nairaland.html
+++ b/nairaland.html
@@ -15,6 +15,12 @@
         <div></div>
         <div id="naira"><span>Search</span></div>
     </header>
-    
+    <section>
+        <h2 style="background-color: rgb(232,236,224);">NAIRALAND NIGERIAN FORUMS</h2>
+        <h3 style="background-color: white;">Nairaland / General: Politics, Crime, Romance, Jobs/Vacancies, Career, Business, Investment, NYSC, Education, Autos, Car Talk, Properties, Health, Travel, Family, Culture, Religion, Food, Diaries, Nairaland Ads, Pets, Agriculture</h3>
+        <h3 id="sport" style="background-color:rgb(232,236,224) ;">Entertainment: Jokes Etc, TV/Movies, Music/Radio, Celebrities, Fashion, Events, Sports, Gaming, Forum Games, Literature</h3>
+        <h3 id="science">Science/Technology: Programming, Webmasters, Computers, Phones, Art, Graphics & Video, Technology Market</h3>
+
+    </section>
 </body>
 </html>
